This this the changelog file for the Pothos Flow toolkit.

Release 0.7.0 (pending)
==========================

- Support for multiple monitors and editor undocking

Release 0.6.2 (2018-12-29)
==========================

- Remove invalid iCCP chunks in PNGs to avoid warning

Release 0.6.1 (2018-04-27)
==========================

- Fix device info display for non strings in system info tree
- Display module version in Plugin Modules tree view

Release 0.6.0 (2017-12-25)
==========================

- Added graph editor resolution to graph properties panel
- Replaced many connect calls with Qt5 style functions
- Require Pothos version 0.6 for new Proxy API calls
- Removed support for older .pth saved file extension
- Renamed the project repo from pothos-gui to PothosFlow
- Added stack trace points and dump for evaluator lockup
- Infer toggle button for boolean type property edit widgets
- Added lockable feature to graph editor to prevent edits
- Added CheckBox and ToggleButton edit widgets for booleans
- Added missing cmath header to GraphConnection.cpp
- Skip disabled blocks when exporting the topology to JSON

Release 0.5.1 (2017-06-09)
==========================

- Added missing functional include for std::bind() usage
- Reduce use of local variables in graph editor export
- Reliable ordering for lists of saved graph objects
- Save selected tab and tab order when selected/moved
- Fix auto-activate when the graph editor not visible
- Layout tweaks for dimension spinbox on DTypeChooser
- Fix DTypeChooser config parsing for keyword options
- Graph editor update activate topology button on toggle
- Fix graph properties panel config options for older Qt

Release 0.5.0 (2017-04-27)
==========================

- Added automatic activate option for saved topologies
- Require 0.5.0 Pothos framework for DocUtil and BlockEval
- Switch over to Qt classes for JSON, time, processes, etc...
- Parameter edit mode to switch between default and line entry