@@ -3,6 +3,10 @@ This this the changelog file for the Pothos Flow toolkit.
 Release 0.7.0 (pending)
 ==========================
 
+- Status label for topology stats monitoring mode
+  Removed the error dialog, and allow status monitor to remain
+  in the automatic reload mode while the topology is inactive.
+
 - Support for multiple monitors and editor undocking
 
 Release 0.6.2 (2018-12-29)
